src/test/deca/syntax/invalid/test_synt9.deca
//Resultat:
//      Erreur syntaxique : mauvaise declaration
class  {
int equals ;
}
